--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
+.idea/
 
 # Distribution / packaging
 .Python
@@ -62,4 +63,4 @@ target/
 .ipynb_checkpoints
 
 #workspace conflict
-**/.idea/workspace.xml
+
