--- a/TrivialWikiAPI/TrivialWikiAPI/Web.config
+++ b/TrivialWikiAPI/TrivialWikiAPI/Web.config
@@ -25,6 +25,14 @@
     </compilers>
   </system.codedom>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type,Authorization,X-User,X-Password" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+      </customHeaders>
+    </httpProtocol>
+
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
