--- a/TrivialWikiAPI/TrivialWikiAPI/packages.config
+++ b/TrivialWikiAPI/TrivialWikiAPI/packages.config
@@ -12,5 +12,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Nancy" version="1.4.3" targetFramework="net452" />
+  <package id="Nancy.Authentication.Stateless" version="1.4.1" targetFramework="net452" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
 </packages>
