--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -10,7 +10,9 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "ng-facebook": "^0.1.6"
+    "ng-facebook": "^0.1.6",
+    "components-font-awesome": "^4.5.0",
+    "lodash": "^4.6.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
