--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "bootstrap": "^3.2.0",
+    "bootstrap": "^3.3.6",
     "angular-animate": "^1.3.0",
     "angular-cookies": "^1.3.0",
     "angular-resource": "^1.3.0",
@@ -12,7 +12,8 @@
     "angular-touch": "^1.3.0",
     "ng-facebook": "^0.1.6",
     "components-font-awesome": "^4.5.0",
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "bootstrap-css-only": "^3.3.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
