--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -13,7 +13,8 @@
     "ng-facebook": "^0.1.6",
     "components-font-awesome": "^4.5.0",
     "lodash": "^4.6.1",
-    "bootstrap-css-only": "^3.3.6"
+    "bootstrap-css-only": "^3.3.6",
+	"angular-ui-bootstrap": "^1.3.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
