--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -14,7 +14,8 @@
     "components-font-awesome": "^4.5.0",
     "lodash": "^4.6.1",
     "bootstrap-css-only": "^3.3.6",
-	"angular-ui-bootstrap": "^1.3.1"
+    "angular-ui-bootstrap": "^1.3.2",
+    "angular-bootstrap": "^1.3.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
