--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -15,7 +15,8 @@
     "lodash": "^4.6.1",
     "bootstrap-css-only": "^3.3.6",
     "angular-ui-bootstrap": "^1.3.2",
-    "angular-bootstrap": "^1.3.2"
+    "angular-bootstrap": "^1.3.2",
+    "hover": "Hover#^2.0.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
