--- a/WebTrivialWiki/package.json
+++ b/WebTrivialWiki/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "grunt-karma": "^0.12.2",
+    "hover.css": "^2.0.2",
     "karma": "^0.13.22"
   },
   "repository": {},
