--- a/TrivialWikiAPI/POSTagger/packages.config
+++ b/TrivialWikiAPI/POSTagger/packages.config
@@ -2,4 +2,13 @@
 <packages>
   <package id="IKVM" version="8.1.5717.0" targetFramework="net452" />
   <package id="Stanford.NLP.POSTagger" version="3.6.0.0" targetFramework="net452" />
+  <package id="System.Collections" version="4.0.0" targetFramework="net452" />
+  <package id="System.Collections.Immutable" version="1.1.38-beta-23516" targetFramework="net452" />
+  <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net452" />
+  <package id="System.Globalization" version="4.0.0" targetFramework="net452" />
+  <package id="System.Linq" version="4.0.0" targetFramework="net452" />
+  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net452" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net452" />
+  <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net452" />
+  <package id="System.Threading" version="4.0.0" targetFramework="net452" />
 </packages>
