--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -11,12 +11,13 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "ng-facebook": "^0.1.6",
-    "components-font-awesome": "^4.5.0",
+    "components-font-awesome": "^4.6.1",
     "lodash": "^4.6.1",
     "bootstrap-css-only": "^3.3.6",
     "angular-ui-bootstrap": "^1.3.2",
     "angular-bootstrap": "^1.3.2",
-    "hover": "Hover#^2.0.2"
+    "hover": "Hover#^2.0.2",
+    "angular-growl-v2": "^0.7.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
