--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -17,7 +17,8 @@
     "angular-ui-bootstrap": "^1.3.2",
     "angular-bootstrap": "^1.3.2",
     "hover": "Hover#^2.0.2",
-    "angular-growl-v2": "^0.7.9"
+    "angular-growl-v2": "^0.7.9",
+    "signalr": "^2.2.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
