--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -18,7 +18,8 @@
     "angular-bootstrap": "^1.3.2",
     "hover": "Hover#^2.0.2",
     "angular-growl-v2": "^0.7.9",
-    "signalr": "^2.2.0"
+    "signalr": "^2.2.0",
+    "angular-signalr-hub": "^1.6.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
