--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -19,7 +19,8 @@
     "hover": "Hover#^2.0.2",
     "angular-growl-v2": "^0.7.9",
     "signalr": "^2.2.0",
-    "angular-signalr-hub": "^1.6.2"
+    "angular-signalr-hub": "^1.6.2",
+    "angular-file-upload": "^2.3.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
