--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -20,7 +20,8 @@
     "angular-growl-v2": "^0.7.9",
     "signalr": "^2.2.0",
     "angular-signalr-hub": "^1.6.2",
-    "angular-file-upload": "^2.3.3"
+    "angular-file-upload": "^2.3.3",
+    "angular-img-cropper": "^1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
