--- a/TrivialWikiAPI/TrivialWikiAPI/Web.config
+++ b/TrivialWikiAPI/TrivialWikiAPI/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -39,6 +39,7 @@
     <handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
+        <directoryBrowse enabled="false" showFlags="Date, Time, Size, Extension" />
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -54,28 +55,23 @@
   <connectionStrings>
     <add name="DatabaseContext" connectionString="Server=tcp:wikitrivia.database.windows.net,1433;Database=WikiTrivia;User ID=wikitrivia@wikitrivia;Password=Licenta2016!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient " />
   </connectionStrings>
-  
+  <location path="Avatars">
+    <system.webServer>
+      <handlers>
+        <remove name="Nancy"/>
+      </handlers>
+    </system.webServer>
+  </location>
   <runtime>
-  
        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-  
             <dependentAssembly>
-  
                  <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-  
                  <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
-  
             </dependentAssembly>
-  
             <dependentAssembly>
-  
                  <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-  
                  <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
-  
             </dependentAssembly>
-  
        </assemblyBinding>
-  
   </runtime>
 </configuration>
