--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -21,7 +21,8 @@
     "signalr": "^2.2.0",
     "angular-signalr-hub": "^1.6.2",
     "angular-file-upload": "^2.3.3",
-    "angular-img-cropper": "^1.1.0"
+    "angular-img-cropper": "^1.1.0",
+    "angular-scroll-glue": "^2.0.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
