--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -22,7 +22,9 @@
     "angular-signalr-hub": "^1.6.2",
     "angular-file-upload": "^2.3.3",
     "angular-img-cropper": "^1.1.0",
-    "angular-scroll-glue": "^2.0.6"
+    "angular-scroll-glue": "^2.0.6",
+    "moment": "^2.13.0",
+    "loaders.css": "^0.1.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
