--- a/TrivialWikiAPI/TrivialWikiAPI/TrivialWikiAPI.csproj
+++ b/TrivialWikiAPI/TrivialWikiAPI/TrivialWikiAPI.csproj
@@ -154,6 +154,7 @@
     <Compile Include="DatabaseModels\Role.cs" />
     <Compile Include="DatabaseModels\Statistics.cs" />
     <Compile Include="DatabaseModels\Topic.cs" />
+    <Compile Include="DatabaseModels\TriviaMessage.cs" />
     <Compile Include="DatabaseModels\User.cs" />
     <Compile Include="Migrations\201603021845246_InitialCreate.cs" />
     <Compile Include="Migrations\201603021845246_InitialCreate.Designer.cs">
@@ -191,11 +192,19 @@
     <Compile Include="Migrations\201606021617436_0013.Designer.cs">
       <DependentUpon>201606021617436_0013.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606022252415_0014.cs" />
+    <Compile Include="Migrations\201606022252415_0014.Designer.cs">
+      <DependentUpon>201606022252415_0014.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roles\RolesManager.cs" />
     <Compile Include="Roles\RolesModule.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Trivia\TriviaHub.cs" />
+    <Compile Include="Trivia\TriviaManager.cs" />
+    <Compile Include="Trivia\TriviaMessageDto.cs" />
+    <Compile Include="Trivia\TriviaModule.cs" />
     <Compile Include="UserManagement\Avatar\AvatarManager.cs" />
     <Compile Include="UserManagement\Avatar\AvatarModule.cs" />
     <Compile Include="UserManagement\Login\LoginManager.cs" />
@@ -235,6 +244,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606021617436_0013.resx">
       <DependentUpon>201606021617436_0013.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606022252415_0014.resx">
+      <DependentUpon>201606022252415_0014.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
