--- a/TrivialWikiAPI/DatabaseManager/DatabaseManager.csproj
+++ b/TrivialWikiAPI/DatabaseManager/DatabaseManager.csproj
@@ -55,7 +55,6 @@
   <ItemGroup>
     <Compile Include="Chat\MessageDto.cs" />
     <Compile Include="Chat\MessagesManager.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="DatabaseModels\Achievement.cs" />
     <Compile Include="DatabaseModels\ChatRoom.cs" />
     <Compile Include="DatabaseModels\DatabaseContext.cs" />
@@ -70,10 +69,13 @@
     <Compile Include="DatabaseModels\Topic.cs" />
     <Compile Include="DatabaseModels\TriviaMessage.cs" />
     <Compile Include="DatabaseModels\User.cs" />
+    <Compile Include="Leaderboard\LeaderboardManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roles\RolesManager.cs" />
     <Compile Include="Trivia\TriviaManager.cs" />
     <Compile Include="Trivia\TriviaMessageDto.cs" />
+    <Compile Include="Leaderboard\LeaderboardResponse.cs" />
+    <Compile Include="Trivia\TriviaQuestionDto.cs" />
     <Compile Include="UserManagement\Login\LoginManager.cs" />
     <Compile Include="UserManagement\UserManager.cs" />
     <Compile Include="UserManagement\UserResponse.cs" />
