Moved model classes to Model folder

--- a/TrivialWikiAPI/POSTagger/POSTagger.csproj
+++ b/TrivialWikiAPI/POSTagger/POSTagger.csproj
@@ -188,12 +188,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WordInformation.cs" />
+    <Compile Include="Model\WordInformation.cs" />
     <Compile Include="Pattern.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SentenceDependency.cs" />
-    <Compile Include="SentenceInformation.cs" />
+    <Compile Include="Model\SentenceDependency.cs" />
+    <Compile Include="Model\SentenceInformation.cs" />
     <Compile Include="SentenceProcessing.cs" />
     <Compile Include="SentenceUtils.cs" />
     <Compile Include="StringUtils.cs" />
