--- a/TrivialWikiAPI/POSTagger/App.config
+++ b/TrivialWikiAPI/POSTagger/App.config
@@ -3,6 +3,9 @@
   <appSettings>
     <add key="Stanford.JarRoot" value="F:\stanford-corenlp-3.6.0-models"/>
 
+    <add key="Tagger.Topic" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources"/>
+
+
     <add key="Tagger.WikipediaResult" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\WikiResult.txt"/>
     <add key="Tagger.CleanText" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources\CleanText.txt"/>
     
