--- a/TrivialWikiAPI/DatabaseManager/packages.config
+++ b/TrivialWikiAPI/DatabaseManager/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Nancy" version="1.4.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
 </packages>
