--- a/TrivialWikiAPI/POSTagger/POSTagger.csproj
+++ b/TrivialWikiAPI/POSTagger/POSTagger.csproj
@@ -188,13 +188,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EndPoint\DirectoryManager.cs" />
+    <Compile Include="EndPoint\Tagger.cs" />
+    <Compile Include="Model\TopicQuestion.cs" />
     <Compile Include="Model\WordInformation.cs" />
     <Compile Include="Pattern.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\SentenceDependency.cs" />
     <Compile Include="Model\SentenceInformation.cs" />
-    <Compile Include="SentenceGenerator.cs" />
     <Compile Include="SentenceProcessing.cs" />
     <Compile Include="SentenceUtils.cs" />
     <Compile Include="StringUtils.cs" />
