--- a/TrivialWikiAPI/TrivialWikiAPI/TrivialWikiAPI.csproj
+++ b/TrivialWikiAPI/TrivialWikiAPI/TrivialWikiAPI.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roles\RolesModule.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Topics\TopicsModule.cs" />
     <Compile Include="Trivia\TriviaModule.cs" />
     <Compile Include="UserManagement\Avatar\AvatarManager.cs" />
     <Compile Include="UserManagement\Avatar\AvatarModule.cs" />
