--- a/TrivialWikiAPI/TrivialWikiAPI/bin/TrivialWikiAPI.dll.config
+++ b/TrivialWikiAPI/TrivialWikiAPI/bin/TrivialWikiAPI.dll.config
@@ -8,6 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <appSettings>
+    <add key="Stanford.JarRoot" value="F:\stanford-corenlp-3.6.0-models" />
+
+    <add key="Tagger.Topic" value="F:\Facultate\Semestrul 6\Licenta\TrivialWiki\TrivialWikiAPI\POSTagger\Resources" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -53,7 +58,7 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="Server=tcp:wikitrivia.database.windows.net,1433;Database=WikiTrivia;User ID=wikitrivia@wikitrivia;Password=Licenta2016!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+    <add name="DatabaseContext" connectionString="Server=tcp:wikitrivia.database.windows.net,1433;Database=WikiTrivia;User ID=wikitrivia@wikitrivia;Password=Licenta2016!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <location path="Avatars">
     <system.webServer>
