--- a/TrivialWikiAPI/DatabaseManager/DatabaseManager.csproj
+++ b/TrivialWikiAPI/DatabaseManager/DatabaseManager.csproj
@@ -75,7 +75,18 @@
     <Compile Include="DatabaseModels\TriviaMessage.cs" />
     <Compile Include="DatabaseModels\User.cs" />
     <Compile Include="Leaderboard\LeaderboardManager.cs" />
+    <Compile Include="Migrations\201606170917043_0015.cs" />
+    <Compile Include="Migrations\201606170917043_0015.Designer.cs">
+      <DependentUpon>201606170917043_0015.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606171138145_0016.cs" />
+    <Compile Include="Migrations\201606171138145_0016.Designer.cs">
+      <DependentUpon>201606171138145_0016.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Questions\QuestionsManager.cs" />
+    <Compile Include="Questions\UpdatedQuestion.cs" />
     <Compile Include="Roles\RolesManager.cs" />
     <Compile Include="Topics\TopicQuestionDto.cs" />
     <Compile Include="Topics\TopicsManager.cs" />
@@ -96,6 +107,14 @@
       <Project>{8B8B3F72-08EB-40B6-9C15-3D6D9BEE81F5}</Project>
       <Name>WikiTrivia.Utilities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201606170917043_0015.resx">
+      <DependentUpon>201606170917043_0015.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606171138145_0016.resx">
+      <DependentUpon>201606171138145_0016.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
