--- a/WebTrivialWiki/bower.json
+++ b/WebTrivialWiki/bower.json
@@ -27,7 +27,8 @@
     "angular-material": "^1.0.9",
     "angular-aria": "^1.5.6",
     "angular-material-icons": "^0.7.0",
-    "angular-xeditable": "^0.1.12"
+    "angular-xeditable": "^0.1.12",
+    "angular-notification-icons": "^0.4.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
