--- a/TrivialWikiAPI/WikiTrivia.Utilities/WikiTrivia.Utilities.csproj
+++ b/TrivialWikiAPI/WikiTrivia.Utilities/WikiTrivia.Utilities.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Encrypt.cs" />
     <Compile Include="ImageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionCleaner.cs" />
     <Compile Include="TriviaHintGenerator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
